feat: new cruds are added and handler is ready for api
